--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       
 
       <div class="blueretro-logo">
-        <a href="https://blueretro.io/" target="_blank" rel="noopener">
+        <a href="https://blueretro.io/advance.html" target="_blank" rel="noopener">
           
           <img src="logoblueretro.png" alt="BlueRetro logo">
         </a>
